# mcp

./: rag_mission_이민영.ipynb
mcp-server-kosa/: main.py  mcp_client.py  mcp_client3.py  mcp_client4.py  mcp_server.py  pyproject.toml  tax.docx
py-mcp-youtube-toolbox/: Dockerfile  README.md  client.py  env.example  main.py  pyproject.toml  requirements.txt  server.py  smithery.yaml
